// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:card 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card className __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-title"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      标题
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body bodyClassName"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  这里是内容
                </span>
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-footer-wrapper"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions-wrapper"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions"
                >
                  <a
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action __PRISMUI_COMPONENT_CLASS_PREFIX__Card-action--sm"
                  >
                    <span>
                      编辑
                    </span>
                  </a>
                  <a
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action __PRISMUI_COMPONENT_CLASS_PREFIX__Card-action--sm"
                  >
                    <span>
                      删除
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards color 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Cards"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Cards-fixedTop"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Cards-body __PRISMUI_COMPONENT_CLASS_PREFIX__Grid"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--xs12 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--sm6 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--md4 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--lg3"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-avtarText"
                      style="background: rgb(180, 0, 158);"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          TR
                        </span>
                      </span>
                    </span>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-field"
                    >
                      <label
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldValue"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          Internet Explorer 4.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--xs12 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--sm6 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--md4 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--lg3"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-avtarText"
                      style="background: rgb(0, 180, 255);"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          CH
                        </span>
                      </span>
                    </span>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-field"
                    >
                      <label
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldValue"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          Chrome 44
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--xs12 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--sm6 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--md4 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--lg3"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-avtarText"
                      style="background: rgb(181, 14, 14);"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          GE
                        </span>
                      </span>
                    </span>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-field"
                    >
                      <label
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldValue"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          Firefox 1.0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--xs12 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--sm6 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--md4 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--lg3"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-avtarText"
                      style="background: rgb(0, 120, 215);"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          PR
                        </span>
                      </span>
                    </span>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-field"
                    >
                      <label
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldValue"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          Opera 10
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--xs12 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--sm6 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--md4 __PRISMUI_COMPONENT_CLASS_PREFIX__Grid-col--lg3"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-avtarText"
                      style="background: rgb(232, 17, 35);"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          WE
                        </span>
                      </span>
                    </span>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                    />
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-field"
                    >
                      <label
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldLabel"
                      >
                        Browser
                      </label>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-fieldValue"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          Safari 12
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards hightlight 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia--left"
            >
              <img
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-img w-36 h-24"
                src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-flex"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          标题
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-toolbar"
                  >
                    <i
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-highlight test-highlight-class"
                    />
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view label label-warning"
                    >
                      <span>
                        标签
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      这里是内容
                    </span>
                  </span>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-footer-wrapper"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-secondary"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        次要说明
                      </span>
                    </span>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions-wrapper"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions"
                    >
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-4"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-2.5"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Card-action pr-1 flex"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards hightlight 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia--left"
            >
              <img
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-img w-36 h-24"
                src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-flex"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          标题
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-toolbar"
                  >
                    <i
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-highlight test-highlight-class"
                    />
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view label label-warning"
                    >
                      <span>
                        标签
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      这里是内容
                    </span>
                  </span>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-footer-wrapper"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-secondary"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        次要说明
                      </span>
                    </span>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions-wrapper"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions"
                    >
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-4"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-2.5"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Card-action pr-1 flex"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:cards media 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card __PRISMUI_COMPONENT_CLASS_PREFIX__Card--link"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia--left"
            >
              <img
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-img w-36 h-24"
                src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-multiMedia-flex"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-heading"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-meta"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          标题
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-toolbar"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view label label-warning"
                    >
                      <span>
                        标签
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-body"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      这里是内容
                    </span>
                  </span>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-footer-wrapper"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-secondary"
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        次要说明
                      </span>
                    </span>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions-wrapper"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-actions"
                    >
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-4"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <a
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Card-action mr-2.5"
                      >
                        <span>
                          操作
                        </span>
                      </a>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Card-action pr-1 flex"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
